fix jibDockerBuild failure (#39)